# GstPipelineStudio

./: .gitignore  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  Cargo.toml  ChangeLog.md  New_Release_Announcement.md  README.md  TODO.md  _typos.toml  index.html  meson.build  meson_options.txt  release.md  run-tests.sh
.gitlab/issue_templates/: Bug.md  Default.md  RFC.md
build-aux/: cargo.py  dev.mooday.GstPipelineStudio.Devel.json  org.freedesktop.dabrain34.GstPipelineStudio.Devel.json
ci/: build_gps.ps1  images_template.yml  install-rust.sh  run_windows.ps1
ci/windows-docker/: Dockerfile  common.ps1  install_gst.ps1  install_gtk.ps1  install_libxml2.ps1  install_pango.ps1
data/: dev.mooday.GstPipelineStudio.appdata.xml.in.in  dev.mooday.GstPipelineStudio.desktop.in  meson.build  org.freedesktop.dabrain34.GstPipelineStudio.appdata.xml.in.in  org.freedesktop.dabrain34.GstPipelineStudio.desktop.in
data/css/: landing.css  style.css
data/dots/: gst124_videotestsrc_autovideosink.dot  gst126_filesrc_bbb_tooltip.dot  gst126_filesrc_jelly_tooltip.dot  gst126_filesrc_special_chars_tooltip.dot  gst126_filesrc_video_audio.dot  gst126_videotestsrc_multiproperty.dot  tooltip_special_chars.dot
data/icons/: AUTHORS  meson.build
graphs/: compositor_tee.gps  compositor_tee.xml  playbin_http_trailer_ogg.xml  video.gps  video.xml  videomixer_alpha.gps
installer/linux/: build_appimage.sh  build_deb.sh  build_rpm.sh
installer/macos/: brew_setup.sh  deploy_macos.sh  mac_app_pack.sh  mac_app_path.sh  mac_launcher.sh  package_setup.sh
installer/macos/installers/: Info.plist  background.xcf  dmg.json  mac.icns
installer/wix/: LICENSE.rtf  build_installer.ps1  gps.bat  gps.wxs  prepare_gstreamer.ps1  prepare_wix.ps1
po/: POTFILES.in  fr.po  gps.pot  it.po
src/: about.rs  app.rs  common.rs  config.rs.in  gps.ui  graph.rs  graphbook.rs  logger.rs  macros.rs  main.rs  mainwindow.rs  meson.build  pipeline.rs  plugindialogs.rs  pluginlist.rs  pluginlistwindow.rs  session.rs  settings.rs  style.css
src/app/: mod.rs  settings.rs
src/app/core/: actions.rs  bootstrap.rs  elements.rs  graphbook.rs  menu.rs  mod.rs  panels.rs
src/gps/: dot_parser.rs  element.rs  mod.rs  pad.rs  pipeline.rs  player.rs  test.rs  websocket.rs
src/graphmanager/: dot_parser.rs  graphview.css  graphview.rs  link.rs  mod.rs  node.rs  node.ui  port.rs  port.ui  property.rs  selection.rs  test.rs  undo.rs
src/ui/: about.rs  app.css  common.rs  dialog.rs  elements.rs  gps.ui  graphview_theme.css  logger.rs  message.rs  mod.rs  models.rs  preferences.rs  properties.rs  resources.rs  splash.rs  treeview.rs
subprojects/: gdk-pixbuf.wrap  gstreamer-1.0.wrap  gtk.wrap  librsvg.wrap
subprojects/packagefiles/gstreamer-1.0/: 0001-Revert-meson-Fix-invalid-include-flag-in-uninstalled.patch
