[package]
name = "gst_pipeline_studio"
version = "0.2.3"
edition = "2018"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.1", package = "gtk4" }
gst = { package = "gstreamer", version = "0.20" }
gst-plugin-gtk4 = { version = "0.10", optional=true }
anyhow = "1"
log = "0.4.11"
once_cell = "1.7.2"
xml-rs = "0.8.4"
serde = "1.0"
serde_any = "0.5"
simplelog = "0.11.2"
futures-channel = "0.3"

[dev-dependencies]
futures-executor = "0.3"

[features]
default = ["gtk4-plugin"]
gtk4-plugin = ["gst-plugin-gtk4"]

[profile.release]
strip = "debuginfo"
