[package]
name = "gst_pipeline_studio"
version = "0.3.4"
edition = "2018"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.2", package = "gtk4" }
gst = { package = "gstreamer", version = "0.21.0" }
gst-plugin-gtk4 = { version = "0.11.0", optional=true }
anyhow = "1"
log = "0.4.11"
once_cell = "1.7.2"
xml-rs = "0.8.4"
serde = "1.0"
serde_any = "0.5"
simplelog = "0.11.2"
futures-channel = "0.3"

[dev-dependencies]
futures-executor = "0.3"

[features]
default = ["gtk4-plugin"]
gtk4-plugin = ["gst-plugin-gtk4"]

[profile.release]
strip = "debuginfo"
